--- a/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-screen-1.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/kakaot/course/course-screen-1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 16 2020 08:07:45 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat May 23 2020 11:58:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebed37df90f4b6a17f7bec1" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -13,50 +13,62 @@
   <link href="../../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../../css/doum-40a54c.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:100,300,regular,500,700"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:100,300,regular,500,700"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="../../images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="columns-4 w-row">
-    <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../../images/angle-left-solid.svg" width="23" alt="" class="image-4"></div>
-    <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6">
-      <h1 class="heading-4">Kakao T</h1>
+  <div class="kakaot-topbar">
+    <div class="columns-12 w-row">
+      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/angle-left-solid.svg" width="29" alt="" class="exit"><a href="../../start/app-list.html" class="button-13 w-button">Button Text</a></div>
+      <div class="w-col w-col-6 w-col-tiny-6">
+        <h1 class="heading-21">Kakao T</h1>
+      </div>
+      <div class="w-col w-col-3 w-col-tiny-3"><img src="../../images/kakaoT.png" width="49" srcset="../../images/kakaoT-p-500.png 500w, ../../images/kakaoT.png 512w" sizes="(max-width: 479px) 17vw, 49px" alt="" class="image-44"></div>
     </div>
-    <div class="w-col w-col-3 w-col-small-3 w-col-tiny-3"><img src="../../images/kakaoT.png" width="49" srcset="../../images/kakaoT-p-500.png 500w, ../../images/kakaoT.png 512w" sizes="(max-width: 479px) 14vw, 48.99305725097656px" alt="" class="image-3"></div>
   </div>
-  <div class="container-6 w-container">
-    <div data-animation="slide" data-disable-swipe="1" data-duration="500" data-infinite="1" class="slider-4 w-slider">
+  <div class="div-block-9">
+    <div class="progressbar">
+      <div class="div-block-10 couse">
+        <div class="div-block-10 probar1 probar2 move"></div>
+      </div>
+    </div>
+    <div data-animation="slide" data-duration="500" data-infinite="1" class="slider-5 w-slider">
       <div class="w-slider-mask">
-        <div class="w-slide">
-          <div><img src="../../images/Screen-Shot-2020-05-16-at-3.06.41-PM.png" srcset="../../images/Screen-Shot-2020-05-16-at-3.06.41-PM.png 500w, ../../images/Screen-Shot-2020-05-16-at-3.06.41-PM.png 696w" sizes="(max-width: 479px) 85vw, (max-width: 767px) 100vw, 695.90283203125px" alt="" class="image-13"></div>
-          <div><img src="../../images/ezgif.com-video-to-gif.gif" width="251" alt="" class="image-17"></div>
+        <div data-w-id="1ad34e24-a004-d660-067c-4d6157ec0eae" class="slide1 w-slide">
+          <div id="vertical" class="div-block-13">
+            <div style="padding-top:56.17021276595745%" class="div-block-13 w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2Fvideoseries%3Flist%3DPLrOe_cMKFpYidneMowvvXZYo11JyAGDpW%26start%3D0&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DIMPcyhyI5PY&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FIMPcyhyI5PY%2Fhqdefault.jpg&args=start%3D0&key=c4e54deccf4d4ec997a64902e9a30300&type=text%2Fhtml&schema=youtube" scrolling="no" title="YouTube embed" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="true"></iframe></div>
+          </div>
         </div>
-        <div class="w-slide">
-          <div><img src="../../images/Screen-Shot-2020-05-16-at-3.21.38-PM.png" srcset="../../images/Screen-Shot-2020-05-16-at-3.21.38-PM.png 500w, ../../images/Screen-Shot-2020-05-16-at-3.21.38-PM.png 712w" sizes="(max-width: 479px) 85vw, (max-width: 767px) 100vw, 711.9618530273438px" alt=""></div>
-          <div><img src="../../images/ezgif.com-video-to-gif-1.gif" width="252" alt="" class="image-16"></div>
+        <div data-w-id="1ad34e24-a004-d660-067c-4d6157ec0eaf" class="w-slide">
+          <div id="vertical" class="div-block-13">
+            <div style="padding-top:56.17021276595745%" class="div-block-13 w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2Fvideoseries%3Flist%3DPLrOe_cMKFpYidneMowvvXZYo11JyAGDpW&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dsy8NUfo4__I&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2Fsy8NUfo4__I%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube" scrolling="no" title="YouTube embed" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="true"></iframe></div>
+          </div>
         </div>
-        <div class="w-slide">
-          <div><img src="../../images/Screen-Shot-2020-05-16-at-3.21.48-PM.png" srcset="../../images/Screen-Shot-2020-05-16-at-3.21.48-PM.png 500w, ../../images/Screen-Shot-2020-05-16-at-3.21.48-PM.png 716w" sizes="(max-width: 479px) 85vw, (max-width: 767px) 100vw, 715.9375610351562px" alt=""></div>
-          <div><img src="../../images/ezgif.com-video-to-gif-2.gif" width="248" alt="" class="image-15"></div>
+        <div data-w-id="15482ade-ef4d-def9-ac6f-2a77bb4f703a" class="w-slide">
+          <div id="vertical" class="div-block-13">
+            <div style="padding-top:56.17021276595745%" class="div-block-13 w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2Fvideoseries%3Flist%3DPLrOe_cMKFpYidneMowvvXZYo11JyAGDpW&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3Dz7gsLxtyIJM&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2Fz7gsLxtyIJM%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube" scrolling="no" title="YouTube embed" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="true"></iframe></div>
+          </div>
         </div>
-        <div class="w-slide">
-          <div><img src="../../images/Screen-Shot-2020-05-16-at-3.21.56-PM.png" srcset="../../images/Screen-Shot-2020-05-16-at-3.21.56-PM.png 500w, ../../images/Screen-Shot-2020-05-16-at-3.21.56-PM.png 718w" sizes="(max-width: 479px) 85vw, (max-width: 767px) 100vw, 717.93408203125px" alt=""></div>
-          <div><img src="../../images/ezgif.com-video-to-gif-3.gif" width="248" alt="" class="image-14"></div>
+        <div data-w-id="7699445c-7420-ab24-4924-9a4354cdae3d" class="w-slide">
+          <div id="vertical" class="div-block-13">
+            <div style="padding-top:56.17021276595745%" class="div-block-13 w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2Fvideoseries%3Flist%3DPLrOe_cMKFpYidneMowvvXZYo11JyAGDpW&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DVFpn21W84ec&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FVFpn21W84ec%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube" scrolling="no" title="YouTube embed" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="true"></iframe></div>
+          </div>
         </div>
-        <div class="w-slide">
-          <div><img src="../../images/Screen-Shot-2020-05-16-at-3.21.56-PM.png" srcset="../../images/Screen-Shot-2020-05-16-at-3.21.56-PM.png 500w, ../../images/Screen-Shot-2020-05-16-at-3.21.56-PM.png 718w" sizes="(max-width: 479px) 85vw, (max-width: 767px) 100vw, 717.93408203125px" alt=""></div>
-          <div class="finish_doum"><img src="../../images/IMG_FE0965C35279-1-1.jpeg" width="255" srcset="../../images/IMG_FE0965C35279-1-1.jpeg 500w, ../../images/IMG_FE0965C35279-1-1.jpeg 800w, ../../images/IMG_FE0965C35279-1-1.jpeg 1000w" sizes="(max-width: 479px) 84vw, 255.00001525878906px" alt="" class="image-18"></div><a href="../../kakaot/course/course-list.html" class="button-5 w-button">Return to Course List</a><a href="../../kakaot/course/course-screen-1.html" aria-current="page" class="button-6 w-button w--current">Retake this course</a></div>
+        <div data-w-id="f4f0d46b-a5e1-af03-a6ff-8f3be85d567d" class="ending w-slide">
+          <div class="section-15"><img src="../../images/KakaoTalk_Photo_2020-05-23-15-56-01.gif" width="342" alt="" class="complete"></div>
+          <div class="section-16"><a href="../../kakaot/course/course-list.html" class="coursebtn w-button">Return to Course List</a><a href="../../kakaot/course/course-screen-1.html" aria-current="page" class="coursebtn _1 w-button w--current">Retake this Course</a></div>
+        </div>
       </div>
-      <div class="left-arrow w-slider-arrow-left">
-        <div class="icon-2 w-icon-slider-left"></div>
+      <div class="w-slider-arrow-left">
+        <div class="icon-4 w-icon-slider-left"></div>
       </div>
-      <div class="right-arrow w-slider-arrow-right">
-        <div class="icon-3 w-icon-slider-right"></div>
+      <div class="w-slider-arrow-right">
+        <div class="icon-5 w-icon-slider-right"></div>
       </div>
-      <div class="slide-nav-2 w-slider-nav w-round"></div>
+      <div class="w-slider-nav w-round"></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ebe4f16b2eae40029cc9f99" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
