--- a/Interactive Prototype/doum-40a54c.webflow (1)/index.html
+++ b/Interactive Prototype/doum-40a54c.webflow (1)/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun May 24 2020 02:45:47 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jun 13 2020 02:29:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ebe4f16b2eae49785cc9f9a" data-wf-site="5ebe4f16b2eae40029cc9f99">
 <head>
   <meta charset="utf-8">
@@ -18,40 +18,72 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body-6">
-  <a href="start/app-list.html" class="link-block-4 w-inline-block">
-    <div class="section-21">
-      <div class="container-10 w-container">
-        <h1 class="heading-15">Hello, welcome to</h1>
-        <h1 class="heading-16">DoUm</h1>
+  <div class="section-21">
+    <div class="container-10 w-container">
+      <h1 class="heading-15">Hello, welcome to</h1>
+      <h1 class="heading-16">DoUm</h1>
+    </div>
+    <p class="paragraph-6">DoUm is a tutorial service for seniors<br>who have difficulty using smartphones.</p>
+  </div>
+  <div class="section-23"><img src="images/주황옷할머니.png" srcset="images/주황옷할머니-p-500.png 500w, images/주황옷할머니-p-800.png 800w, images/주황옷할머니.png 979w" sizes="(max-width: 479px) 50vw, (max-width: 979px) 100vw, 979px" alt="" class="image-39"></div>
+  <div class="section-20">
+    <div class="w-container">
+      <p class="paragraph-7"> The young generation were able to help the seniors, but our group thought of another way to resolve the problems seniors might face; <br><strong>a solution</strong> that users can access easily, anytime.</p>
+    </div><a href="start/app-list.html" class="button-14 w-button">Continue</a></div>
+  <div>
+    <h3 class="heading-22">Supporting Features</h3>
+  </div>
+  <div><img src="images/Tutorial-Video.gif" width="315" alt="" class="image-42">
+    <h3 class="heading-24">Tutorial</h3>
+    <p class="paragraph-8">Encountered a problem while using an application? Go to the tutorial to find the solution to your problem right away</p>
+    <h4 class="heading-25">Tutorials provide...</h4>
+    <p class="paragraph-10">- A step by step solution for the corresponding problem <br>- Screenshots with red circles that show you where to exactly tap on<br>- Short text descriptions that supports a clear guide</p>
+  </div>
+  <div><img src="images/ezgif.com-video-to-gif.gif" width="125" alt="" class="image-42">
+    <h3 class="heading-24">Course</h3>
+    <p class="paragraph-8">Found a new application you want to learn but don&#x27;t know where to start? Don&#x27;t worry, we have the courses that allows you to completely master all the features of the application</p>
+    <h4 class="heading-26">Courses provide...</h4>
+    <p class="paragraph-8">- A full course on all the features of the application<br>- Videos that show the exact screen of the application you want to learn<br>- An audio guide in the video that helps you learn the application not only visually but also auditory</p>
+  </div><img src="images/Logo.png" alt="" class="image-46">
+  <section id="cards-section" class="cards-section">
+    <div class="centered-container w-container">
+      <h2 class="heading-27">Meet Our Team</h2>
+      <div class="cards-grid-container">
+        <div id="w-node-394e94c30e59-85cc9f9a">
+          <div class="cards-image-mask"><img src="images/1.jpg" srcset="images/1-p-500.jpeg 500w, images/1.jpg 702w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 229.328125px, 286.65625px" alt="" class="cards-image"></div>
+          <h3 class="heading-28">dew==true;</h3>
+          <p class="paragraph-12">Our team is formed of three members; Jeongmin Yoo, Yejin Shin, and Yooha Bae.</p>
+        </div>
+        <div id="w-node-394e94c30e60-85cc9f9a">
+          <div class="cards-image-mask"><img src="images/2.jpg" srcset="images/2-p-500.jpeg 500w, images/2-p-800.jpeg 800w, images/2-p-1080.jpeg 1080w, images/2.jpg 1437w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 229.328125px, 286.65625px" alt="" class="cards-image"></div>
+          <h3 id="w-node-394e94c30e63-85cc9f9a" class="heading-29">Jeongmin Yoo</h3>
+          <p id="w-node-394e94c30e65-85cc9f9a" class="paragraph-11">SUNY Korea, Sophmore, Computer Science Major</p>
+        </div>
+        <div id="w-node-394e94c30e67-85cc9f9a">
+          <div class="cards-image-mask"><img src="images/3.jpg" srcset="images/3-p-500.jpeg 500w, images/3-p-800.jpeg 800w, images/3-p-1080.jpeg 1080w, images/3-p-1600.jpeg 1600w, images/3-p-2000.jpeg 2000w, images/3.jpg 2199w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 229.328125px, 286.65625px" alt="" class="cards-image"></div>
+          <h3 id="w-node-394e94c30e6a-85cc9f9a" class="heading-30">Yejin Shin</h3>
+          <p id="w-node-394e94c30e6c-85cc9f9a" class="paragraph-13">SUNY Korea, Junior, Computer Science Major</p>
+        </div>
+        <div id="w-node-7f03f6adc94b-85cc9f9a">
+          <div class="cards-image-mask"><img src="images/4.jpg" srcset="images/4-p-500.jpeg 500w, images/4.jpg 710w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 229.328125px, 286.65625px" alt="" class="cards-image"></div>
+          <h3 id="w-node-7f03f6adc94e-85cc9f9a" class="heading-30">Yooha Bae</h3>
+          <p id="w-node-7f03f6adc950-85cc9f9a" class="paragraph-13">SUNY Korea, Sophmore, Computer Science Major</p>
+        </div>
       </div>
-      <p class="paragraph-6">DoUm is a tutorial service for seniors<br>who have difficulty using smartphones.</p>
     </div>
-    <div class="section-23"><img src="images/주황옷할머니.png" srcset="images/주황옷할머니-p-500.png 500w, images/주황옷할머니-p-800.png 800w, images/주황옷할머니.png 979w" sizes="(max-width: 479px) 50vw, (max-width: 979px) 100vw, 979px" alt="" class="image-39"></div>
-    <div class="section-20">
-      <div class="w-container">
-        <p class="paragraph-7"> The young generation were able to help the seniors, but our group thought of another way to resolve the problems seniors might face; <br><strong>a solution</strong> that users can access easily, anytime.</p>
-      </div>
-    </div>
-    <div>
-      <h3 class="heading-22">Supporting Features</h3>
-    </div>
-    <div><img src="images/Tutorial-Video.gif" width="315" alt="" class="image-42">
-      <h3 class="heading-24">Tutorial</h3>
-      <p class="paragraph-8">Encountered a problem while using an application? Go to the tutorial to find the solution to your problem right away</p>
-      <h4 class="heading-25">Tutorials provide...</h4>
-      <p class="paragraph-10">- A step by step solution for the corresponding problem <br>- Screenshots with red circles that show you where to exactly tap on<br>- Short text descriptions that supports a clear guide</p>
-    </div>
-    <div><img src="images/Course-Video-2.gif" width="125" alt="" class="image-42">
-      <h3 class="heading-24">Course</h3>
-      <p class="paragraph-8">Found a new application you want to learn but don&#x27;t know where to start? Don&#x27;t worry, we have the courses that allows you to completely master all the features of the application</p>
-      <h4 class="heading-26">Courses provide...</h4>
-      <p class="paragraph-8">- A full course on all the features of the application<br>- Videos that show the exact screen of the application you want to learn<br>- An audio guide in the video that helps you learn the application not only visually but also auditory</p>
-    </div>
-    <div class="section-22">
-      <h3 class="heading-19">DoUm is the best HELPER</h3>
-    </div>
-    <div><img src="images/Logo.png" alt="" class="image-46"></div>
-  </a>
+  </section><img src="images/Logo.png" alt="" class="image-46">
+  <div>
+    <h1 class="heading-31">Additional Links</h1>
+  </div>
+  <p class="paragraph-14">To see the process of our development, check out the links below.</p>
+  <div class="container-11 w-container"><a href="https://github.com/jnyshin/DoUm/raw/master/User%20Research/dew%20%3D%3D%20true%3B%20Formative%20Research.pdf" target="_blank" class="link-3">● Formative Research Report<br>‍</a></div>
+  <div class="container-12 w-container"><a href="https://drive.google.com/file/d/1M1IqpN3c5rer-P_QtFZlNv7eSwqWy1XV/view?usp=sharing" target="_blank" class="link-4">● Paper Prototype Video</a></div>
+  <div class="container-13 w-container"><a href="https://www.figma.com/file/h80viUJOldmtg7eB244KXT/DoUm?node-id=0%3A1" target="_blank" class="link-5">● Mid-fidelity Prototype<br>‍</a></div>
+  <div class="container-14 w-container"><a href="https://drive.google.com/file/d/1EEN4EALkzG_F3nvbsev2m1cYRIWF9udr/view?usp=sharing" target="_blank" class="link-6">● Mid-fildelity Prototype Video<br>‍</a></div>
+  <div class="container-15 w-container"><a href="#" target="_blank" class="link-7">● Final Presentation Video</a></div>
+  <div class="section-22">
+    <h3 class="heading-19">DoUm is the best HELPER</h3>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ebe4f16b2eae40029cc9f99" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
